<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent">
        <com.needyyy.app.views.AppTextView
            android:id="@+id/tv_home_daiting"
            style="@style/MainScreenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home"
            android:drawablePadding="@dimen/dp15"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="@dimen/dp15"
            android:paddingTop="@dimen/dp10"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_bg"/>

        <com.needyyy.app.views.AppTextView
            android:id="@+id/tv_aboutus_daiting"
            style="@style/MainScreenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/about_us"
            android:drawablePadding="@dimen/dp15"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="@dimen/dp15"
            android:paddingTop="@dimen/dp10"
            android:text="@string/aboutus"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_bg"/>
        <com.needyyy.app.views.AppTextView
            android:id="@+id/tv_Security_daiting"
            style="@style/MainScreenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/security"
            android:drawablePadding="@dimen/dp15"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="@dimen/dp15"
            android:paddingTop="@dimen/dp10"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_bg"/>

        <com.needyyy.app.views.AppTextView
            android:id="@+id/tv_helpsupport_daiting"
            style="@style/MainScreenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/help_support"
            android:drawablePadding="@dimen/dp15"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp15"
            android:paddingTop="@dimen/dp10"
            android:paddingRight="@dimen/dp15"
            android:paddingBottom="@dimen/dp10"
            android:textColor="@color/black"
            android:text="@string/helpandsupport"
            android:textStyle="bold" />

        <com.needyyy.app.views.AppTextView
            android:id="@+id/tv_logout_daiting"
            style="@style/MainScreenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/logout"
            android:drawablePadding="@dimen/dp15"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="@dimen/dp15"
            android:paddingTop="@dimen/dp10"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
