<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_corner"
    android:clickable="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/coverpic"
        android:background="@drawable/background_corner"
        android:layout_width="match_parent"

        android:layout_height="@dimen/dp130">

        <ImageView
            android:id="@+id/cover_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/needyy"
            android:background="@drawable/background_arman"
            android:scaleType="centerCrop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp130"
            android:background="@drawable/cover_black">

        </FrameLayout>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp100"
            android:layout_marginTop="@dimen/dp50"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile_pic"
            android:layout_width="@dimen/dp70"
            android:layout_height="@dimen/dp70"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp10"
            android:src="@drawable/needyy" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:background="@color/color_gray_bg">

        <LinearLayout
            android:id="@+id/ll_social"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/bg_blue_curve"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/social_active" />

            <TextView
                android:id="@+id/tv_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5"
                android:text="@string/social"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_daiting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_daiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dating_inactive" />

            <TextView
                android:id="@+id/tv_daiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5"
                android:text="@string/dating"
                android:textColor="@color/colorText_light_gray" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_social"
            layout="@layout/layout_humburger_social"
            android:visibility="visible">

        </include>

        <include
            android:id="@+id/layout_daiting"
            layout="@layout/layout_humburger_daiting"
            android:visibility="gone">

        </include>
    </LinearLayout>

</LinearLayout>